# xiuer

./: .cursorrules  CHANGELOG.md  Makefile  README-DEPLOYMENT.md  README.md  docker-compose.no-mail.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  note_data_analysis.md
.github/workflows/: deploy-to-aliyun.yml  test-xhs-access.yml
Spider_XHS/: main.py  pyproject.toml
config/nginx/: nginx.conf
docs/: aliyun-deployment.md
fastapi_backend/: .env.example  Dockerfile  pyproject.toml  start.prod.sh  start.sh
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/app/: config.py  database.py  main.py  models.py  utils.py
fastapi_backend/tests/: conftest.py  test_database.py
local-shared-data/: openapi.json
mdc-examples/alerts/: development-alerts.mdc
mdc-examples/code-examples/: backend-service.mdc
nextjs-frontend/: .env.example  Dockerfile  Dockerfile.dev  debug_openapi.json  middleware.ts  next.config.mjs  openapi-ts.config.ts  package.json  pnpm-lock.yaml  start.prod.sh
nextjs-frontend/app/: globals.css  layout.tsx  page.tsx
nextjs-frontend/components/: AdvancedDataTable.tsx  EasyTable.tsx  NotesDataTable.tsx  TasksDataTable.tsx  animated-template.tsx  auth-guard.tsx
nextjs-frontend/hooks/: use-data-table.ts  use-outside-click.ts
nextjs-frontend/lib/: auth.ts  clientConfig.ts  composition.ts  definitions.ts
nextjs-frontend/shared-data/: openapi.json
nextjs-frontend/types/: index.ts
rules-new/: README.mdc
rules-new/api-docs/: notes-api.mdc
scripts/: setup-aliyun-server.sh  test-aliyun-compatibility.sh
(+66 files in other folders)
