[project]
name = "spider-xhs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "丁俊杰", email = "10725046+JunJD@user.noreply.gitee.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyExecJS",
    "requests",
    "loguru",
    "python-dotenv",
    "retry",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
